Refactor: Add route-maps for VRFs for EVPN

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
@@ -136,6 +136,9 @@ route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    set extcommunity soo 192.168.30.1:0 additive
 !
+route-map RM-CONN-2-BGP-VRFS permit 20
+   set extcommunity soo 192.168.30.1:0 additive
+!
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
 !
@@ -192,14 +195,14 @@ router bgp 65000
       route-target import evpn 100:100
       route-target export evpn 100:100
       router-id 192.168.30.1
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
    !
    vrf PROD
       rd 192.168.30.1:42
       route-target import evpn 42:42
       route-target export evpn 42:42
       router-id 192.168.30.1
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
 !
 management api http-commands
    protocol https
