--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -488,6 +488,9 @@ route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    set extcommunity soo 192.168.42.1:511 additive
 !
+route-map RM-CONN-2-BGP-VRFS permit 20
+   set extcommunity soo 192.168.42.1:511 additive
+!
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
 !
@@ -562,7 +565,7 @@ router bgp 65000
       neighbor 172.17.0.0 remote-as 65199
       neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.0 description site-ha-disabled-leaf_Ethernet1.666_vrf_ATTRACTED-VRF-FROM-UPLINK
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
    !
    vrf default
       rd 192.168.42.1:1
@@ -578,7 +581,7 @@ router bgp 65000
       neighbor 172.17.0.0 remote-as 65199
       neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.0 description site-ha-disabled-leaf_Ethernet1.1000_vrf_IT
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
    !
    vrf PROD
       rd 192.168.42.1:142
@@ -588,7 +591,7 @@ router bgp 65000
       neighbor 172.17.0.0 remote-as 65199
       neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.0 description site-ha-disabled-leaf_Ethernet1.142_vrf_PROD
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
 !
 router traffic-engineering
 !
