--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -397,6 +397,9 @@ route-map RM-CONN-2-BGP permit 10
 route-map RM-CONN-2-BGP permit 50
    match ip address prefix-list PL-WAN-HA-PREFIXES
 !
+route-map RM-CONN-2-BGP-VRFS permit 20
+   set extcommunity soo 192.168.42.2:423 additive
+!
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
 !
@@ -491,7 +494,7 @@ router bgp 65000
       neighbor 172.17.0.6 remote-as 65199
       neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.666_vrf_ATTRACTED-VRF-FROM-UPLINK
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
    !
    vrf default
       rd 192.168.42.2:1
@@ -510,7 +513,7 @@ router bgp 65000
       neighbor 172.17.0.6 remote-as 65199
       neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.1000_vrf_IT
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
    !
    vrf PROD
       rd 192.168.42.2:142
@@ -523,7 +526,7 @@ router bgp 65000
       neighbor 172.17.0.6 remote-as 65199
       neighbor 172.17.0.6 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.6 description site-ha-enabled-leaf2B_Ethernet1.142_vrf_PROD
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
 !
 router traffic-engineering
 !
