--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
@@ -71,6 +71,7 @@ router_bgp:
         - 1000:1000
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: PROD
     router_id: 192.168.42.1
     neighbors:
@@ -90,6 +91,7 @@ router_bgp:
         - 142:142
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: ATTRACTED-VRF-FROM-UPLINK
     router_id: 192.168.42.1
     neighbors:
@@ -109,6 +111,7 @@ router_bgp:
         - 666:666
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: default
     rd: 192.168.42.1:1
     route_targets:
@@ -308,6 +311,12 @@ route_maps:
     type: permit
     match:
     - ip address prefix-list PL-STATIC-VRF-DEFAULT
+    set:
+    - extcommunity soo 192.168.42.1:511 additive
+- name: RM-CONN-2-BGP-VRFS
+  sequence_numbers:
+  - sequence: 20
+    type: permit
     set:
     - extcommunity soo 192.168.42.1:511 additive
 static_routes:
