--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -69,6 +69,7 @@ router_bgp:
         - 1000:1000
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: PROD
     router_id: 192.168.42.2
     neighbors:
@@ -88,6 +89,7 @@ router_bgp:
         - 142:142
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: ATTRACTED-VRF-FROM-UPLINK
     router_id: 192.168.42.2
     neighbors:
@@ -107,6 +109,7 @@ router_bgp:
         - 666:666
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: default
     rd: 192.168.42.2:1
     route_targets:
@@ -293,6 +296,12 @@ route_maps:
     type: permit
     match:
     - extcommunity ECL-EVPN-SOO
+- name: RM-CONN-2-BGP-VRFS
+  sequence_numbers:
+  - sequence: 20
+    type: permit
+    set:
+    - extcommunity soo 192.168.42.2:511 additive
 agents:
 - name: KernelFib
   environment_variables:
