--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
@@ -80,6 +80,7 @@ router_bgp:
         - 1000:1000
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: PROD
     router_id: 192.168.43.1
     neighbors:
@@ -99,6 +100,7 @@ router_bgp:
         - 142:142
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: ATTRACTED-VRF-FROM-UPLINK
     router_id: 192.168.43.1
     neighbors:
@@ -118,6 +120,7 @@ router_bgp:
         - 666:666
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: default
     rd: 192.168.43.1:1
     route_targets:
@@ -134,6 +137,7 @@ router_bgp:
     router_id: 192.168.43.1
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: TRANSIT
     router_id: 192.168.43.1
     rd: 192.168.43.1:66
@@ -148,6 +152,7 @@ router_bgp:
         - 66:66
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
@@ -386,6 +391,12 @@ route_maps:
     type: permit
     match:
     - extcommunity ECL-EVPN-SOO
+- name: RM-CONN-2-BGP-VRFS
+  sequence_numbers:
+  - sequence: 20
+    type: permit
+    set:
+    - extcommunity soo 192.168.43.1:422 additive
 agents:
 - name: KernelFib
   environment_variables:
