--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-custom-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-custom-default-policy.cfg
@@ -212,6 +212,9 @@ route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    set extcommunity soo 192.168.42.1:1 additive
 !
+route-map RM-CONN-2-BGP-VRFS permit 20
+   set extcommunity soo 192.168.42.1:1 additive
+!
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
 !
@@ -275,7 +278,7 @@ router bgp 65000
       route-target import evpn 42:42
       route-target export evpn 42:42
       router-id 192.168.42.1
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
 !
 router traffic-engineering
 !
