--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -212,7 +212,7 @@ interface Ethernet2
    ip address 172.15.6.6/31
 !
 interface Ethernet52
-   description LAN HA OMG
+   description DIRECT LAN HA LINK
    no shutdown
    no switchport
    ip address 10.10.10.1/31
@@ -328,6 +328,9 @@ route-map RM-CONN-2-BGP permit 10
 route-map RM-CONN-2-BGP permit 50
    match ip address prefix-list PL-WAN-HA-PREFIXES
 !
+route-map RM-CONN-2-BGP-VRFS permit 20
+   set extcommunity soo 192.168.42.6:404 additive
+!
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
 !
@@ -416,14 +419,14 @@ router bgp 65000
       route-target import evpn 1000:1000
       route-target export evpn 1000:1000
       router-id 192.168.42.7
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
    !
    vrf PROD
       rd 192.168.42.7:142
       route-target import evpn 142:142
       route-target export evpn 142:142
       router-id 192.168.42.7
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
 !
 router traffic-engineering
 !
