--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
@@ -439,6 +439,9 @@ route-map RM-CONN-2-BGP permit 10
 route-map RM-CONN-2-BGP permit 50
    match ip address prefix-list PL-WAN-HA-PREFIXES
 !
+route-map RM-CONN-2-BGP-VRFS permit 20
+   set extcommunity soo 192.168.43.1:422 additive
+!
 route-map RM-EVPN-EXPORT-VRF-DEFAULT permit 10
    match extcommunity ECL-EVPN-SOO
 !
@@ -527,7 +530,7 @@ router bgp 65000
       neighbor 172.17.0.0 remote-as 65199
       neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.0 description site-ha-enabled-leaf1_Ethernet1.666_vrf_ATTRACTED-VRF-FROM-UPLINK
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
    !
    vrf default
       rd 192.168.43.1:1
@@ -543,11 +546,11 @@ router bgp 65000
       neighbor 172.17.0.0 remote-as 65199
       neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.0 description site-ha-enabled-leaf1_Ethernet1.1000_vrf_IT
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
    !
    vrf NOT-WAN-VRF
       router-id 192.168.43.1
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
    !
    vrf PROD
       rd 192.168.43.1:142
@@ -557,14 +560,14 @@ router bgp 65000
       neighbor 172.17.0.0 remote-as 65199
       neighbor 172.17.0.0 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.0 description site-ha-enabled-leaf1_Ethernet1.142_vrf_PROD
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
    !
    vrf TRANSIT
       rd 192.168.43.1:66
       route-target import evpn 66:66
       route-target export evpn 66:66
       router-id 192.168.43.1
-      redistribute connected
+      redistribute connected route-map RM-CONN-2-BGP-VRFS
 !
 router traffic-engineering
 !
