--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
@@ -89,6 +89,7 @@ router_bgp:
         - 1000:1000
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: PROD
     router_id: 192.168.42.3
     neighbors:
@@ -112,6 +113,7 @@ router_bgp:
         - 142:142
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: ATTRACTED-VRF-FROM-UPLINK
     router_id: 192.168.42.3
     neighbors:
@@ -135,6 +137,7 @@ router_bgp:
         - 666:666
     redistribute_routes:
     - source_protocol: connected
+      route_map: RM-CONN-2-BGP-VRFS
   - name: default
     rd: 192.168.42.3:1
     route_targets:
@@ -408,6 +411,12 @@ route_maps:
     type: permit
     match:
     - extcommunity ECL-EVPN-SOO
+- name: RM-CONN-2-BGP-VRFS
+  sequence_numbers:
+  - sequence: 20
+    type: permit
+    set:
+    - extcommunity soo 192.168.42.2:423 additive
 agents:
 - name: KernelFib
   environment_variables:
