--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -203,7 +203,7 @@ jobs:
           - 'example-l2ls-fabric'
           - 'example-single-dc-l3ls'
         ansible_version:
-          - 'ansible-core==2.17.0rc2 --upgrade' # Testing with 2.17.0rc1 in CI <- update to "'ansible-core<2.18.0 --upgrade'" before merging PR!
+          - 'ansible-core<2.18.0 --upgrade'
         pip_requirements:
           - 'ansible_collections/arista/avd/requirements.txt'
         # Also test minimum ansible version for one scenario.
@@ -236,7 +236,7 @@ jobs:
         with:
           molecule_parentdir: 'ansible_collections/arista/avd'
           molecule_command: 'test'
-          molecule_args: '--scenario-name ${{ matrix.avd_scenario }} -- --extra-vars avd_ignore_requirements=True -vvv' # Testing with 2.17.0rc2 in CI revert this change before merging PR!
+          molecule_args: '--scenario-name ${{ matrix.avd_scenario }}'
           pip_file: ${{ matrix.pip_requirements }}
           galaxy_file: "ansible_collections/arista/avd/collections.yml"
           ansible: ${{ matrix.ansible_version }}
