--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -382,6 +382,22 @@ keys:
                 new_key: listen_ranges
             session_tracker:
               type: str
+            shared_secret:
+              type: dict
+              keys:
+                profile:
+                  type: str
+                  required: true
+                  description: Name of profile defined under `management_security`.
+                hash_algorithm:
+                  type: str
+                  required: true
+                  description: |-
+                    Note: Algorithm hmac-sha-256 requires EOS version 4.31.1F and above.
+                  valid_values:
+                    - "aes-128-cmac-96"
+                    - "hmac-sha-256"
+                    - "hmac-sha1-96"
             ttl_maximum_hops:
               type: int
               convert_types:
@@ -570,6 +586,22 @@ keys:
                   type: bool
             session_tracker:
               type: str
+            shared_secret:
+              type: dict
+              keys:
+                profile:
+                  type: str
+                  required: true
+                  description: Name of profile defined under `management_security`.
+                hash_algorithm:
+                  type: str
+                  required: true
+                  description: |-
+                    Note: Algorithm hmac-sha-256 requires EOS version 4.31.1F and above.
+                  valid_values:
+                    - "aes-128-cmac-96"
+                    - "hmac-sha-256"
+                    - "hmac-sha1-96"
             ttl_maximum_hops:
               type: int
               convert_types:
