Feat(eos_cli_config_gen): Add Regex pattern for region/zone/site name for cv_pathfinder

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -9904,6 +9904,7 @@ keys:
           name:
             type: str
             required: true
+            pattern: ^[A-Za-z0-9_.:{}\[\]-]+$
           id:
             type: int
             convert_types:
@@ -9918,6 +9919,7 @@ keys:
           name:
             type: str
             required: true
+            pattern: ^[A-Za-z0-9_.:{}\[\]-]+$
           id:
             type: int
             convert_types:
@@ -9932,6 +9934,7 @@ keys:
           name:
             type: str
             required: true
+            pattern: ^[A-Za-z0-9_.:{}\[\]-]+$
           id:
             type: int
             convert_types:
