--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_telemetry_postcard_policy.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/monitor_telemetry_postcard_policy.schema.yml
@@ -55,14 +55,17 @@ keys:
                     type: str
                     description: 16 bit hexadecimal mask for TCP/UDP or IP ID with atmost 2 unset bits.
       marker_vxlan:
-        type: bool
-        description: Enable vxlan marking using default bit 0.
-      vxlan_marking_bit:
-        type: int
-        min: 1
-        max: 31
-        convert_types:
-        - str
+        type: dict
+        keys:
+          enabled:
+            type: bool
+            description: Enable vxlan marking using default bit 0.
+          header_word_zero_bit:
+            type: int
+            min: 1
+            max: 31
+            convert_types:
+            - str
       profiles:
         type: list
         description: Postcard telemetry profiles.
@@ -115,15 +118,25 @@ keys:
                         protocol:
                           type: str
                           valid_values: [ tcp, udp ]
-                        destination_ports:
-                          type: list
-                          description: |-
-                            Enter the port name or range or port numbers in a list. The port numbers should be in range of 0-65535.
-                            Example:
-                              ["12","14-20", "www"]
                         source_ports:
                           type: list
                           description: |-
-                            Enter the port name or range or port numbers in a list. The port numbers should be in range of 0-65535.
-                            Example:
-                              ["12","14-20", "www"]
+                            A list of ports or port numbers or port name in the list. Combination of port numbers or range and port name is not supported on EOS. The port numbers should be in range of 0-65535.
+                            e.g.
+                              [ "12", "14-20" ]
+                              [ "www" ]
+                          items:
+                            type: str
+                            convert_types:
+                            - int
+                        destination_ports:
+                          type: list
+                          description: |-
+                            A list of range of ports or port numbers or port name in the list. Combination of port numbers or range and port name is not supported on EOS. The port numbers should be in range of 0-65535.
+                            e.g.
+                              [ "12", "14-20", "80" ]
+                              [ "https" ]
+                          items:
+                            type: str
+                            convert_types:
+                            - int
