--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -161,6 +161,9 @@ jobs:
           echo "PY_COLORS=1" >> $GITHUB_ENV
           echo "ANSIBLE_FORCE_COLOR=1" >> $GITHUB_ENV
       - uses: actions/checkout@v4
+      - name: Downgrade requests library to 2.31 # Due to bug in 2.32 with docker https://github.com/docker/docker-py/pull/3257
+        run: |
+          pip install 'requests==2.31.0'
       - name: Run molecule action
         uses: arista-netdevops-community/action-molecule-avd@v1.7
         with:
@@ -203,7 +206,8 @@ jobs:
           - 'example-l2ls-fabric'
           - 'example-single-dc-l3ls'
         ansible_version:
-          - 'ansible-core<2.18.0 --upgrade'
+          # Testing all scenario with 2.16.x, due to bug with in 2.17.0 with and the way we test eos_designs_negative_unit_tests https://github.com/ansible/ansible/issues/83292
+          - 'ansible-core>=2.16.0,<2.17.0 --upgrade'
         pip_requirements:
           - 'ansible_collections/arista/avd/requirements.txt'
         # Also test minimum ansible version for one scenario.
@@ -215,7 +219,7 @@ jobs:
             ansible_version: 'ansible-core>=2.15.0,<2.16.0 --upgrade'
             pip_requirements: 'ansible_collections/arista/avd/requirements.txt'
           - avd_scenario: 'eos_designs_unit_tests'
-            ansible_version: 'ansible-core>=2.16.0,<2.17.0 --upgrade'
+            ansible_version: 'ansible-core<2.18.0 --upgrade'
             pip_requirements: 'ansible_collections/arista/avd/requirements.txt'
     needs: [ file-changes ]
     if: needs.file-changes.outputs.eos_design == 'true' || needs.file-changes.outputs.config_gen == 'true'
