--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7379,22 +7379,22 @@ keys:
                           - udp
                         source_ports:
                           type: list
-                          description: "A list of ports or port range or port name
-                            in the list. Combination of port numbers or range and
-                            port name is not supported on EOS. The port numbers should
-                            be in range of 0-65535.\ne.g.\n  [ \"12\", \"14-20\" ]\n
-                            \ [ \"www\" ]"
+                          description: "A list of port numbers or port range or port
+                            name in the list. Combination of port numbers or range
+                            and port name is not supported on EOS. The port numbers
+                            should be in range of 0-65535.\ne.g.\n  [ \"12\", \"14-20\"
+                            ]\n  [ \"www\" ]"
                           items:
                             type: str
                             convert_types:
                             - int
                         destination_ports:
                           type: list
-                          description: "A list of range of ports or port range or
-                            port name in the list. Combination of port numbers or
-                            range and port name is not supported on EOS. The port
-                            numbers should be in range of 0-65535.\ne.g.\n  [ \"12\",
-                            \"14-20\", \"80\" ]\n  [ \"https\" ]"
+                          description: "A list of port numbers or port range or port
+                            name in the list. Combination of port numbers or range
+                            and port name is not supported on EOS. The port numbers
+                            should be in range of 0-65535.\ne.g.\n  [ \"12\", \"14-20\",
+                            \"80\" ]\n  [ \"https\" ]"
                           items:
                             type: str
                             convert_types:
